--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-chat-elements": "^12.0.8",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.58.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
