--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
