--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "graphql": "^16.6.0",
-    "react-calendly": "4.0.0",
     "graphql-ws": "^5.11.3",
-
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-calendly": "4.0.0",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
