--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.17.1",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.3",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-calendly": "4.0.0",
