--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "lint": "prettier --write 'src/**/*jsx' 'src/**/*js' 'src/**/*css' 'src/**/*json'"
   },
   "eslintConfig": {
+    "rules": {
+      "no-unused-vars": "off"
+    },
     "extends": [
       "react-app",
       "react-app/jest"
