--- a/package.json
+++ b/package.json
@@ -35,7 +35,14 @@
     "lint": "prettier --write 'src/**/*jsx' 'src/**/*js' 'src/**/*css' 'src/**/*json'"
   },
   "eslintConfig": {
-    "no-unused-vars": ["error", { "args": "none" }],
+    "rules": {
+      "no-unused-vars": [
+        "error",
+        {
+          "args": "none"
+        }
+      ]
+    },
     "extends": [
       "react-app",
       "react-app/jest"
