actually turned off unused variable error

--- a/package.json
+++ b/package.json
@@ -36,12 +36,7 @@
   },
   "eslintConfig": {
     "rules": {
-      "no-unused-vars": [
-        "error",
-        {
-          "args": "none"
-        }
-      ]
+      "no-unused-vars": "off"
     },
     "extends": [
       "react-app",
